Bug squashin'

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -26,7 +26,9 @@
 
 
 
-
+.hdr-nav label {
+	margin: inherit !important;
+}
 
 .img-box {
 	position: relative;
